fix expiration date + product loading
