# server/src/openapi.yaml
@@ -142,8 +142,13 @@ paths:
           multipart/form-data:
             schema:
               type: object
+              required:
+               - name
+               - image
               properties:
                 name:
+                  type: string
+                expirationDate:
                   type: string
                 image:
                   type: string
